--- a/output/archives.html
+++ b/output/archives.html
@@ -7,7 +7,6 @@
 <head>
         <title>Transferred Learnings</title>
         <meta charset="utf-8" />
-        <link href="https://chrisdinant.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Transferred Learnings Full Atom Feed" />
         <link rel="stylesheet" href="/theme/css/main.css" />
         <link rel="stylesheet" href="/theme/css/jupyter.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -17,7 +16,7 @@
 
 <body>
         <header id="banner" class="body">
-                <h1><a href="https://chrisdinant.github.io/">Transferred Learnings <strong></strong></a></h1>
+                <h1><a href="./">Transferred Learnings <strong></strong></a></h1>
         </header><!-- /#banner -->
 <!-- Sidebar -->
             <div id="sidebar">
@@ -35,9 +34,9 @@
                 <!-- Nav -->
                     <nav id="nav">
                         <ul>                            
-                            <li><a href="https://chrisdinant.github.io/pages/about-me.html">Whose blog is this?</a></li>
-                            <li><a href="https://chrisdinant.github.io/category/data-science">Data Science</a></li>
-                            <li><a href="https://chrisdinant.github.io/category/not-data-science">Not Data Science</a></li>
+                            <li><a href="./pages/about-me.html">Whose blog is this?</a></li>
+                            <li><a href="./category/data-science">Data Science</a></li>
+                            <li><a href="./category/not-data-science">Not Data Science</a></li>
                         </ul>
                     </nav>
 
@@ -81,19 +80,19 @@
 
 <header> 
     <h2>Sun 28 October 2018</h2>
-    <p><a href="https://chrisdinant.github.io/custom-pixels.html">Music Video</a></p>
+    <p><a href="./custom-pixels.html">Music Video</a></p>
     <p>Custom pixel replacement for video with FFMPEG</p>
     <h2>Sun 28 October 2018</h2>
-    <p><a href="https://chrisdinant.github.io/naive-Bayes.html">What's so naive about naive Bayes?</a></p>
+    <p><a href="./naive-Bayes.html">What's so naive about naive Bayes?</a></p>
     <p>Assuming feature independence tends to help classification accuracy</p>
     <h2>Sat 17 March 2018</h2>
-    <p><a href="https://chrisdinant.github.io/entropy-and-information-gain.html">Entropy and Information Gain</a></p>
+    <p><a href="./entropy-and-information-gain.html">Entropy and Information Gain</a></p>
     <p>The more homogeneous a set, the higher the entropy and the lower the amount of information.</p>
     <h2>Wed 14 March 2018</h2>
-    <p><a href="https://chrisdinant.github.io/speech-Recognition.html">Kaggle Tensorflow Speech Recognition Challenge</a></p>
+    <p><a href="./speech-Recognition.html">Kaggle Tensorflow Speech Recognition Challenge</a></p>
     <p>A walk through of my approach</p>
     <h2>Tue 06 February 2018</h2>
-    <p><a href="https://chrisdinant.github.io/bayes-and-binomial-theorems.html">Bayes and Binomial Theorems</a></p>
+    <p><a href="./bayes-and-binomial-theorems.html">Bayes and Binomial Theorems</a></p>
     <p>Our intuitions about test accuracy are often very inaccurate</p>
 </header>
 </article>
