--- a/output/authors.html
+++ b/output/authors.html
@@ -7,7 +7,6 @@
 <head>
         <title>Transferred Learnings - Authors</title>
         <meta charset="utf-8" />
-        <link href="https://chrisdinant.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Transferred Learnings Full Atom Feed" />
         <link rel="stylesheet" href="/theme/css/main.css" />
         <link rel="stylesheet" href="/theme/css/jupyter.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -17,7 +16,7 @@
 
 <body>
         <header id="banner" class="body">
-                <h1><a href="https://chrisdinant.github.io/">Transferred Learnings <strong></strong></a></h1>
+                <h1><a href="./">Transferred Learnings <strong></strong></a></h1>
         </header><!-- /#banner -->
 <!-- Sidebar -->
             <div id="sidebar">
@@ -35,9 +34,9 @@
                 <!-- Nav -->
                     <nav id="nav">
                         <ul>                            
-                            <li><a href="https://chrisdinant.github.io/pages/about-me.html">Whose blog is this?</a></li>
-                            <li><a href="https://chrisdinant.github.io/category/data-science">Data Science</a></li>
-                            <li><a href="https://chrisdinant.github.io/category/not-data-science">Not Data Science</a></li>
+                            <li><a href="./pages/about-me.html">Whose blog is this?</a></li>
+                            <li><a href="./category/data-science">Data Science</a></li>
+                            <li><a href="./category/not-data-science">Not Data Science</a></li>
                         </ul>
                     </nav>
 
@@ -76,7 +75,7 @@
             </div><!-- /#menu -->
     <h1>Authors on Transferred Learnings</h1>
 
-    <ul>        <li><a href="https://chrisdinant.github.io/author/chris-dinant.html">Chris Dinant</a> (5)</li>
+    <ul>        <li><a href="./author/chris-dinant.html">Chris Dinant</a> (5)</li>
     </ul>
         <!-- This jQuery line finds any span that contains code highlighting classes and then selects the parent <pre> tag and adds a border. 
         This is done as a workaround to visually distinguish the code inputs and outputs -->
