--- a/output/free-will.html
+++ b/output/free-will.html
@@ -194,8 +194,25 @@ Intuitively it feels like, <i>"of course I could change my behavior based on som
 <li>When are you sufficiently conscious?</li>
 <li>Does it come with age?</li>
 <li>Can you have partial free will?</li>
+<li>How are consciousness and free will really connected?</li>
+<li>Is this a matter of how we define free will?</li>
 </ul>
-<p>We can also just dismiss the intuition of a libertarian free will and call it an illusion. Rationally I'm tempted to do this, but at the same time, I'm not convinced it is correct.</p>
+<p>And a ton of other questions that I have been pondering but won't list here for brevity sake. For those who are not into the whole brevity thing I might write an even longer post in the future.</p>
+<p>We can also just dismiss the intuition of a libertarian free will and call it an illusion. Rationally I'm tempted to do this, but at the same time, I'm not convinced it is correct. My main objection against libertarian free will is really:</p>
+<p><i>How can a brain that consists of molecules inside a universe that is ruled by natural laws somehow be free from these laws to choose one alternative future over another?</i></p>
+<p>I have the feeling, maybe it's more a suspicion, that the answer to this question can be found by deeply studying complex systems, which I think involves reverse-engineering our consciousness. So that is what I will try to do, intensively study complex systems and intelligence research.</p>
+<p>Here are some other topics related to the Free Will question that I would love to address in later posts:</p>
+<ul>
+<li>Douglas Hofstadter's Strange Loops and Symballs</li>
+<li>Compatibilism</li>
+<li>Panpsychism</li>
+<li>Moral culpability</li>
+<li>Meaning and analogy</li>
+<li>Joscha Bach: <i>"Consciousness emerges over dimensions of disagreement with the universe"</i></li>
+<li>Consciousness vs Free Will vs Intelligence</li>
+<li>Does learning to make decisions make you more free?</li>
+<li>Am I not me anymore when I have a behavior-changing brain tumor?</li>
+</ul>
 <p>Δ9</p>
             </section>
 
